- form get event listener

--- a/twitter.html
+++ b/twitter.html
@@ -30,7 +30,7 @@
         <p id="loadMore">Loading...</p>
     </div>
     <div class="loading">
-        <img src=url("https://raw.githubusercontent.com/CodingGarden/meower/master/client/loading.gif") alt="">
+        <img src="" alt="">
     </div>
 </main>
 <script src="twitter.js"></script>
