- added loading gif to project

--- a/twitter.html
+++ b/twitter.html
@@ -27,10 +27,10 @@
     </div>
     <div class="button-container">
         <!-- <button id="loadMoreButton" class="button-primary" style="visibility: hidden">Load More Mews</button> -->
-        <p id="loadMore">Loading...</p>
+        <!--<p id="loadMore">Loading...</p>-->
     </div>
     <div class="loading">
-        <img src="" alt="">
+        <img src="Spinner-1s-200px%20(1).gif" alt="">
     </div>
 </main>
 <script src="twitter.js"></script>
