--- a/client/twitter.html
+++ b/client/twitter.html
@@ -33,6 +33,6 @@
         <img src="Spinner-1s-200px%20(1).gif" alt="">
     </div>
 </main>
-<script src="twitter.js"></script>
+<script src="client.js"></script>
 </body>
 </html>
