--- a/client/twitter.html
+++ b/client/twitter.html
@@ -32,6 +32,9 @@
     <div class="loading">
         <img src="Spinner-1s-200px%20(1).gif" alt="">
     </div>
+    <div class="mews">
+
+    </div>
 </main>
 <script src="client.js"></script>
 </body>
